# ecat_project

./: CMakeLists.txt  README.md
includes/: IPC.h  KITECH_CoE_TEST.h
includes/struct/: RxPDO_CH.h  TxPDO_CH.h
rtnet_script/: start_rtnet.sh
src/: IPC.cpp  KITECH_CoE_TEST.cpp  ecat_server.cpp  ros_ipc.cpp
